--- a/src/gardener/Views/ListView/ListSalePage.xaml
+++ b/src/gardener/Views/ListView/ListSalePage.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.ListView.ListSalePage"
-             Title="Выбор действия">
+             Title="{Binding Title}">
     <ContentPage.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
             <Setter Property="FontSize" Value="Medium" />
