--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -7,11 +7,11 @@
     <ViewCell.View>
         <StackLayout Margin="10, 10" Orientation="Horizontal">
 
-            <Label Text="{Binding RowTitle}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
-            <Label Text="{Binding Row}" FontSize="Large" TextColor="#333333" />
+            <Label x:Name="PlaceTitle" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+            <Label x:Name="RowTitle" FontSize="Large" TextColor="#333333" />
 
-            <Label Text="{Binding PlaceTitle}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
-            <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" />
+            <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+            <Label Text="{Binding Row}" FontSize="Large" TextColor="#333333" />
 
         </StackLayout>
     </ViewCell.View>
