--- a/src/gardener/Views/BlocksViews/FloorViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/FloorViewCell.xaml
@@ -6,7 +6,7 @@
                            x:Class="gardener.Views.BlocksViews.FloorViewCell"
                            SelectedBackgroundColor="WhiteSmoke">
     <ViewCell.View>
-        <Label Text="{Binding Value, StringFormat=\{0\} Этаж}"
+        <Label x:Name="Label"
                FontSize="30"
                TextColor="#9e4819"
                Margin="5"
