--- a/src/gardener/Views/MapPage.xaml
+++ b/src/gardener/Views/MapPage.xaml
@@ -11,14 +11,14 @@
                 <AbsoluteLayout HorizontalOptions="Center" VerticalOptions="Center" x:Name="MapGardener" HeightRequest="600" WidthRequest="400">
                     <Image AbsoluteLayout.LayoutFlags="PositionProportional"
                                  AbsoluteLayout.LayoutBounds="0, 0.3, AutoSize, AutoSize"
-                                   HorizontalOptions="Center"
+                                 HorizontalOptions="Center"
                                  WidthRequest="400"
                                  BackgroundColor="Transparent"
                                  Source="maptc.jpg"/>
                     <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
                                AbsoluteLayout.LayoutBounds="0.45, 0.31, AutoSize, AutoSize"
                                HorizontalOptions="Center"
-                               Source="tc6.png"
+                               x:Name="Tc6"
                                WidthRequest="230"
                                BackgroundColor="Transparent"
                                Clicked="ImageButton_Clicked"/>
@@ -26,44 +26,44 @@
                                AbsoluteLayout.LayoutBounds="0.67, 0.278, AutoSize, AutoSize"
                                HorizontalOptions="Center"
                                WidthRequest="27"
-                               Source="tc4.png"
+                               x:Name="Tc4"
                                BackgroundColor="Transparent"
                                Clicked="ImageButton_Clicked_1"/>
                     <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
                                WidthRequest="105"
                                AbsoluteLayout.LayoutBounds="0.38, 0.476, AutoSize, AutoSize"
-                                         HorizontalOptions="Center"
+                               HorizontalOptions="Center"
                                BackgroundColor="Transparent"
-                               Source="tc7.png"
+                               x:Name="Tc7"
                                 Clicked="ImageButton_Clicked_2"/>
                     <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
                                WidthRequest="105"
                                BackgroundColor="Transparent"
                                AbsoluteLayout.LayoutBounds="0.7, 0.473, AutoSize, AutoSize"
-                                         HorizontalOptions="Center"
-                               Source="tc9.png"
+                               HorizontalOptions="Center"
+                               x:Name="Tc9"
                                 Clicked="ImageButton_Clicked_3"/>
                     <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
                                WidthRequest="150"
                                BackgroundColor="Transparent"
                                AbsoluteLayout.LayoutBounds="0.46, 0.575, AutoSize, AutoSize"
-                                         HorizontalOptions="Center"
-                               Source="tc5.png"
+                               HorizontalOptions="Center"
+                               x:Name="Tc5"
                                  Clicked="ImageButton_Clicked_4"/>
                     <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
                                WidthRequest="27"
                                BackgroundColor="Transparent"
                                AbsoluteLayout.LayoutBounds="0.028, 0.464, AutoSize, AutoSize"
-                                         HorizontalOptions="Center"
-                               Source="tc2.png"
+                               HorizontalOptions="Center"
+                               x:Name="Tc2"
                                  Clicked="ImageButton_Clicked_6"/>
                     <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
                                WidthRequest="51"
                                BackgroundColor="Transparent"
                                AbsoluteLayout.LayoutBounds="0.024, 0.515, AutoSize, AutoSize"
-                                         HorizontalOptions="Center"
-                               Source="tc3.png"
-                                 Clicked="ImageButton_Clicked_7"/>
+                               HorizontalOptions="Center"
+                               x:Name="Tc3"
+                               Clicked="ImageButton_Clicked_7"/>
                 </AbsoluteLayout>
             </ex:ZoomScroll>
         </ScrollView>
