Бронь свободных мест

--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -6,7 +6,10 @@
                            x:Class="gardener.Views.BlocksViews.PlaceViewCell">
     <ViewCell.View>
         <StackLayout Margin="10, 10" Orientation="Horizontal">
-
+            <StackLayout.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Resevation}" 
+                                      NumberOfTapsRequired="1"/>
+            </StackLayout.GestureRecognizers>
             <Label x:Name="PlaceTitle" FontSize="Large" TextColor="#333333" Margin="10, 0" />
             <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
 
