--- a/src/gardener/Views/ReservationPage.xaml
+++ b/src/gardener/Views/ReservationPage.xaml
@@ -9,13 +9,24 @@
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Margin="30,10,30,10" WidthRequest="300">
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Место: " FontSize="Large"/>
+                    <Label Text="1" FontSize="Large"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Ряд: " FontSize="Large"/>
+                    <Label Text="2" FontSize="Large"/>
+                </StackLayout>
                 <gardener:ExtendedEntry FontSize="Large" TextColor="#9e4819"
                                         PlaceholderColor="#7a7a7a"
+                                        Placeholder="Имя"
                                         IsEnabled="False"    />
                 <gardener:ExtendedEntry FontSize="Large" TextColor="#9e4819"
                                         PlaceholderColor="#7a7a7a"
+                                        Placeholder="Фамилия"
                                         IsEnabled="False" />
                 <gardener:ExtendedEntry FontSize="Large" TextColor="#9e4819"
+                                        Placeholder="Номер"
                                         PlaceholderColor="#7a7a7a" Keyboard="Numeric">
                     <gardener:ExtendedEntry.Behaviors>
                         <gardener:MaskedBehavior Mask="+X (XXX) XXX-XX-XX" />
