Добавлен новый раздел Новый ТЦ

--- a/src/gardener/Views/NewsDetailPage.xaml
+++ b/src/gardener/Views/NewsDetailPage.xaml
@@ -4,16 +4,20 @@
              x:Class="gardener.Views.NewsDetailPage"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+        <Grid VerticalOptions="FillAndExpand">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="100" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Label
+                Grid.Row="0"
                 x:Name="Label"
                 Text="{Binding Title}"   
                 FontSize="Large"
                 VerticalOptions="Start" Margin="10"/>
-                <Image Source="{Binding Image}" x:Name="Image"/>
-                <StackLayout x:Name="WebContent"/>
-            </StackLayout>
-        </ScrollView>
+            <Image Grid.Row="1" Source="{Binding Image}" x:Name="Image"/>
+            <StackLayout Grid.Row="2" x:Name="WebContent"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
