--- a/src/gardener/Views/BlocksViews/NewsViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/NewsViewCell.xaml
@@ -4,16 +4,21 @@
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
           x:Class="gardener.Views.BlocksViews.NewsViewCell">
     <ViewCell.View>
-        <StackLayout>
-            <StackLayout Orientation="Horizontal" StyleClass="item-block">
-                <StackLayout WidthRequest="100" Margin="10,0,10,0">
-                    <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
-                        <Image Source="{Binding ImageUrl}" Aspect="AspectFill" VerticalOptions="Center" />
-                    </StackLayout>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <StackLayout Grid.Row="0" Grid.Column="0" Margin="10,0,10,0">
+                <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
+                    <Image Source="{Binding ImageUrl}" Aspect="AspectFill" VerticalOptions="Center" />
                 </StackLayout>
-                <Label Text="{Binding Title}" Margin="10, 0" FontSize="Medium" TextColor="#9e4819"
-                       VerticalTextAlignment="Center" HorizontalTextAlignment="Start" />
             </StackLayout>
-        </StackLayout>
+            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Title}" Margin="10, 0" FontSize="Medium" TextColor="#9e4819"
+                       VerticalTextAlignment="Center" HorizontalTextAlignment="Start" />
+        </Grid>
     </ViewCell.View>
 </ViewCell>
