--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -4,19 +4,22 @@
                            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                            xmlns:gardener="clr-namespace:gardener"
                            xmlns:converters="clr-namespace:gardener.Converters;assembly=gardener"
-                           x:Class="gardener.Views.BlocksViews.PlaceViewCell">
+                           x:Class="gardener.Views.BlocksViews.PlaceViewCell"
+                           >
     <ViewCell.View>
-        <StackLayout Margin="10, 10">
-            <StackLayout.Resources>
-                <converters:PlaceStatusConverter x:Key="PlaceStatusConverter" />
-            </StackLayout.Resources>
-            <Label Text="{Binding Status, Converter={StaticResource PlaceStatusConverter}}" HorizontalOptions="End"/>
-            <StackLayout  Orientation="Horizontal">
-                <Label x:Name="PlaceTitle" FontSize="Large" TextColor="#333333" Margin="10, 0" />
-                <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+        <StackLayout BackgroundColor="{Binding Status, Converter={StaticResource PlaceStatusConverterToColor}}">
+            <StackLayout Margin="10, 10">
+                <StackLayout.Resources>
+                    <converters:PlaceStatusConverter x:Key="PlaceStatusConverter" />
+                </StackLayout.Resources>
+                <Label Text="{Binding Status, Converter={StaticResource PlaceStatusConverter}}" HorizontalOptions="End"/>
+                <StackLayout Orientation="Horizontal">
+                    <Label x:Name="RowTitle" FontSize="Large" TextColor="#333333" />
+                    <Label Text="{Binding Row}" FontSize="Large" TextColor="#333333" />
 
-                <Label x:Name="RowTitle" FontSize="Large" TextColor="#333333" />
-                <Label Text="{Binding Row}" FontSize="Large" TextColor="#333333" />
+                    <Label x:Name="PlaceTitle" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+                    <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+                </StackLayout>
             </StackLayout>
         </StackLayout>
     </ViewCell.View>
