--- a/src/gardener/Views/ReservationPage.xaml
+++ b/src/gardener/Views/ReservationPage.xaml
@@ -34,7 +34,7 @@
                                         Text="{Binding PhoneNumber}"
                                         PlaceholderColor="#7a7a7a" Keyboard="Numeric">
                     <gardener:ExtendedEntry.Behaviors>
-                        <gardener:MaskedBehavior Mask="+X (XXX) XXX-XX-XX" />
+                        <gardener:MaskedBehavior Mask="+7 (XXX) XXX-XX-XX" />
                     </gardener:ExtendedEntry.Behaviors>
                 </gardener:ExtendedEntry>
             </StackLayout>
