--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -7,18 +7,29 @@
                            x:Class="gardener.Views.BlocksViews.PlaceViewCell"
                            >
     <ViewCell.View>
-        <StackLayout BackgroundColor="{Binding Status, Converter={StaticResource PlaceStatusConverterToColor}}">
+        <StackLayout BackgroundColor="{Binding Place.Status, Converter={StaticResource PlaceStatusConverterToColor}}">
             <StackLayout Margin="10, 10">
                 <StackLayout.Resources>
+                    <converters:NullToBoolConverter x:Key="NullToBoolConverter" />
                     <converters:PlaceStatusConverter x:Key="PlaceStatusConverter" />
                 </StackLayout.Resources>
-                <Label Text="{Binding Status, Converter={StaticResource PlaceStatusConverter}}" HorizontalOptions="End"/>
                 <StackLayout Orientation="Horizontal">
                     <Label x:Name="RowTitle" FontSize="Large" TextColor="#333333" />
-                    <Label Text="{Binding Row}" FontSize="Large" TextColor="#333333" />
+                    <Label Text="{Binding Place.Row}" FontSize="Large" TextColor="#333333" />
 
                     <Label x:Name="PlaceTitle" FontSize="Large" TextColor="#333333" Margin="10, 0" />
-                    <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+                    <Label Text="{Binding Place.PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+                </StackLayout>
+
+                <StackLayout HorizontalOptions="Start" Orientation="Horizontal">
+                    <Label Text="{Binding Place.Status, Converter={StaticResource PlaceStatusConverter}}" />
+                    <Label IsVisible="{Binding Place.ReservationDate, Converter={StaticResource NullToBoolConverter}}" 
+                           Text="{Binding Place.ReservationDate, StringFormat='до {0:dd.MM.yyyy hh:mm:ss}'}"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" 
+                             IsVisible="{Binding Time, Converter={StaticResource NullToBoolConverter}}">
+                    <Label Text="Истекает через: "/>
+                    <Label Text="{Binding Time}" />
                 </StackLayout>
             </StackLayout>
         </StackLayout>
