--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -8,29 +8,33 @@
                            >
     <ViewCell.View>
         <StackLayout BackgroundColor="{Binding Place.Status, Converter={StaticResource PlaceStatusConverterToColor}}">
-            <StackLayout Margin="10, 10">
-                <StackLayout.Resources>
-                    <converters:NullToBoolConverter x:Key="NullToBoolConverter" />
-                    <converters:PlaceStatusConverter x:Key="PlaceStatusConverter" />
-                </StackLayout.Resources>
-                <StackLayout Orientation="Horizontal">
-                    <Label x:Name="RowTitle" FontSize="Large" TextColor="#333333" />
-                    <Label Text="{Binding Place.Row}" FontSize="Large" TextColor="#333333" />
+            <StackLayout.Resources>
+                <converters:NullToBoolConverter x:Key="NullToBoolConverter" />
+                <converters:PlaceStatusConverter x:Key="PlaceStatusConverter" />
+            </StackLayout.Resources>
+            
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="3"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
-                    <Label x:Name="PlaceTitle" FontSize="Large" TextColor="#333333" Margin="10, 0" />
-                    <Label Text="{Binding Place.PlaceNumber}" FontSize="Large" TextColor="#333333" Margin="10, 0" />
-                </StackLayout>
+                <Label Text="{Binding Place.Row}" FontSize="Large" TextColor="#333333" />
+                <BoxView Grid.Column="1" HorizontalOptions="Fill" VerticalOptions="Fill" Color="Gray"/>
+                <Label Grid.Column="2" Text="{Binding Place.PlaceNumber}" FontSize="Large" TextColor="#333333" />
+            </Grid>
 
-                <StackLayout HorizontalOptions="Start" Orientation="Horizontal">
-                    <Label Text="{Binding Place.Status, Converter={StaticResource PlaceStatusConverter}}" />
-                    <Label IsVisible="{Binding DateTime, Converter={StaticResource NullToBoolConverter}}" 
-                           Text="{Binding DateTime, StringFormat='до {0:dd.MM.yyyy hh:mm:ss}'}"/>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" 
+            <StackLayout IsVisible="{Binding IsStatusVisible}" HorizontalOptions="Start" Orientation="Horizontal">
+                <Label Text="{Binding Place.Status, Converter={StaticResource PlaceStatusConverter}}" />
+                <Label IsVisible="{Binding DateTime, Converter={StaticResource NullToBoolConverter}}" 
+                       Text="{Binding DateTime, StringFormat='до {0:dd.MM.yyyy hh:mm:ss}'}"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" 
                              IsVisible="{Binding Time, Converter={StaticResource NullToBoolConverter}}">
-                    <Label Text="Истекает через: "/>
-                    <Label Text="{Binding Time}" />
-                </StackLayout>
+                <Label Text="Истекает через: "/>
+                <Label Text="{Binding Time}" />
             </StackLayout>
         </StackLayout>
     </ViewCell.View>
