--- a/src/gardener/Views/ListView/FormAppBuyPage.xaml
+++ b/src/gardener/Views/ListView/FormAppBuyPage.xaml
@@ -11,6 +11,11 @@
                                IsRunning="{Binding IsBusy}" />
             <StackLayout>
                 <StackLayout Margin="30,10,30,10" WidthRequest="300">
+                    <gardener:ExtendedEntry Placeholder="{Binding RowTitle}" 
+                                            FontSize="Large" 
+                                            TextColor="#9e4819"
+                                            PlaceholderColor="#7a7a7a"
+                                            Text="{Binding Row, Mode=TwoWay}" />
                     <gardener:ExtendedEntry Placeholder="{Binding PlaceTitle}" FontSize="Large" TextColor="#9e4819"
                                             PlaceholderColor="#7a7a7a"
                                             Text="{Binding PlaceNumber, Mode=TwoWay}" />
