--- a/src/gardener/Views/ListView/FormAppPage.xaml
+++ b/src/gardener/Views/ListView/FormAppPage.xaml
@@ -6,21 +6,31 @@
              x:Class="gardener.Views.ListView.FormAppPage"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <ScrollView>
+        <Grid VerticalOptions="Fill" HorizontalOptions="Fill">
+            <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center"
+                                   IsRunning="{Binding IsBusy}" />
             <StackLayout>
-                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                    <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center"
-                                       IsRunning="{Binding IsBusy}" />
-                    <ListView HasUnevenRows="True" ItemsSource="{Binding PlaceCollection}"
-                              SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <blocksViews:PlaceViewCell />
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="3"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Margin="10,10,10,0" Text="{Binding RowTitle}" FontSize="Large" TextColor="#333333" />
+                    <BoxView Grid.Column="1" HorizontalOptions="Fill" VerticalOptions="Fill" Color="Gray"/>
+                    <Label Margin="10,10,10,0" Grid.Column="2" Text="{Binding PlaceTitle}" FontSize="Large" TextColor="#333333"/>
                 </Grid>
+                <ListView Margin="10,0,10,0" HasUnevenRows="True" ItemsSource="{Binding PlaceCollection}"
+                              ItemAppearing="ListView_OnItemAppearing"
+                              SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <blocksViews:PlaceViewCell />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackLayout>
-        </ScrollView>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
