--- a/src/gardener/Views/ListView/FormAppSalePage.xaml
+++ b/src/gardener/Views/ListView/FormAppSalePage.xaml
@@ -12,9 +12,13 @@
                                IsRunning="{Binding IsBusy}" />
             <StackLayout>
                 <StackLayout Margin="30,10,30,10" WidthRequest="300">
+                    <gardener:ExtendedEntry Placeholder="{Binding RowTitle}" FontSize="Large" TextColor="#9e4819"
+                                            PlaceholderColor="#7a7a7a"
+                                            Text="{Binding Row, Mode=TwoWay}" />
                     <gardener:ExtendedEntry Placeholder="{Binding PlaceTitle}" FontSize="Large" TextColor="#9e4819"
                                             PlaceholderColor="#7a7a7a"
                                             Text="{Binding PlaceNumber, Mode=TwoWay}" />
+
                     <gardener:ExtendedEntry Placeholder="{Binding NameTitle}" FontSize="Large" TextColor="#9e4819"
                                             Text="{Binding Name, Mode=TwoWay}"
                                             PlaceholderColor="#7a7a7a" />
