--- a/src/gardener/Views/ListView/FeedbackPage.xaml
+++ b/src/gardener/Views/ListView/FeedbackPage.xaml
@@ -11,33 +11,45 @@
             <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                 <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center"
                                    IsRunning="{Binding IsBusy}" />
-                <StackLayout Margin="30,10,30,10" WidthRequest="300">
-                    <ScrollView>
-                        <StackLayout HeightRequest="300">
-                            <Editor Placeholder="{Binding TextTitle}"
-                                    FontSize="Large"
-                                    AutoSize="TextChanges"
-                                    TextColor="#9e4819"
-                                    VerticalOptions="FillAndExpand"
-                                    Keyboard="Chat"
-                                    PlaceholderColor="#7a7a7a"
-                                    Text="{Binding Text, Mode=TwoWay}" />
-                            <gardener:ExtendedEntry Placeholder="{Binding NameTitle}" FontSize="Large" TextColor="#9e4819"
-                                                Text="{Binding Name, Mode=TwoWay}"
-                                                PlaceholderColor="#7a7a7a" />
-                            <gardener:ExtendedEntry Placeholder="{Binding PhoneTitle}" FontSize="Large" TextColor="#9e4819"
-                                                Text="{Binding PhoneNumber, Mode=TwoWay}"
-                                                PlaceholderColor="#7a7a7a" Keyboard="Numeric">
-                                <gardener:ExtendedEntry.Behaviors>
-                                    <gardener:MaskedBehavior Mask="+7 (XXX) XXX-XX-XX" />
-                                </gardener:ExtendedEntry.Behaviors>
-                            </gardener:ExtendedEntry>
-                            <Button Text="{Binding SendButtonText}" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
-                                    HorizontalOptions="CenterAndExpand" VerticalOptions="Center"
-                                    WidthRequest="250" BackgroundColor="Transparent" CornerRadius="15"
-                                    Command="{Binding SendFormCommand}" />
-                        </StackLayout>
-                    </ScrollView>
+                <StackLayout>
+                    <StackLayout Margin="30,10,30,10" WidthRequest="300">
+                        <gardener:ExtendedEntry Placeholder="{Binding NameTitle}" FontSize="Large" TextColor="#9e4819"
+                                            Text="{Binding Name, Mode=TwoWay}"
+                                            PlaceholderColor="#7a7a7a" />
+                        <gardener:ExtendedEntry Placeholder="{Binding PhoneTitle}" FontSize="Large" TextColor="#9e4819"
+                                            Text="{Binding PhoneNumber, Mode=TwoWay}"
+                                            PlaceholderColor="#7a7a7a" Keyboard="Numeric">
+                            <gardener:ExtendedEntry.Behaviors>
+                                <gardener:MaskedBehavior Mask="+7 (XXX) XXX-XX-XX" />
+                            </gardener:ExtendedEntry.Behaviors>
+                        </gardener:ExtendedEntry>
+
+
+                        <Label Text="{Binding RowName, Mode=OneWay}" FontSize="Large" Margin="0,10,0,10">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding OpenRowPopUpCommand}"/>
+                            </Label.GestureRecognizers>
+                        </Label>
+
+                        <Label Text="{Binding NumberName, Mode=OneWay}" FontSize="Large" Margin="0,10,0,10">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding OpenPlacePopUpCommand}"/>
+                            </Label.GestureRecognizers>
+                        </Label>
+                        <Editor Placeholder="{Binding TextTitle}"
+                            FontSize="Large"
+                            AutoSize="TextChanges"
+                            TextColor="#9e4819"
+                            VerticalOptions="Start"
+                            HeightRequest="150"
+                            Keyboard="Chat"
+                            PlaceholderColor="#7a7a7a"
+                            Text="{Binding Text, Mode=TwoWay}" />
+                    </StackLayout>
+                    <Button Text="{Binding SendButtonText}" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
+                        HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
+                        WidthRequest="250" BackgroundColor="Transparent" CornerRadius="15"
+                        Command="{Binding SendFormCommand}" />
                 </StackLayout>
             </Grid>
         </ScrollView>
