--- a/src/gardener/Views/SelectPlacePopUpPage.xaml
+++ b/src/gardener/Views/SelectPlacePopUpPage.xaml
@@ -5,6 +5,8 @@
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
     xmlns:gardener="clr-namespace:gardener;assembly=gardener"
+    HasSystemPadding="False"
+    HasKeyboardOffset="False"
     x:Class="gardener.Views.SelectPlacePopUpPage">
     <!--You can set an animation in the xaml file or in the csharp code behind-->
     <pages:PopupPage.Animation>
@@ -20,8 +22,15 @@
             HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
     <!--You can use any elements here which are extended from Xamarin.Forms.View-->
-    <Frame BackgroundColor="White" HasShadow="True" CornerRadius="10" Margin="20,100,20,100" VerticalOptions="Center">
+    <Frame BackgroundColor="White" HasShadow="True" CornerRadius="10" Margin="80,150,80,150" VerticalOptions="Center">
         <StackLayout Padding="5">
+            <gardener:ExtendedEntry Placeholder="{Binding RowTitle}" 
+                                    FontSize="Large" 
+                                    TextColor="#9e4819"
+                                    PlaceholderColor="#7a7a7a"
+                                    HorizontalOptions="Fill"
+                                    Text="{Binding Row, Mode=TwoWay}" />
+
             <gardener:ExtendedEntry Placeholder="{Binding PlaceTitle}" 
                                     FontSize="Large" 
                                     TextColor="#9e4819"
